feat: Enhance Salesforce agent with PostgreSQL and Insurance database support
- Added PostgreSQL and Insurance database configurations with connection functions.
- Integrated database querying capabilities alongside existing Salesforce queries.
- Updated dependencies in pyproject.toml to include necessary libraries.
- Enhanced logging for database interactions and error handling.
- Modified system instructions to reflect new multi-source data capabilities.
- Implemented chart rendering functions for both main and insurance databases.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,14 @@ dependencies = [
   "monsterui",
   "logfire>=4.20.0",
   "pydantic-ai>=1.48.0",
+  "duckdb",
+  "altair",
+  "python-dotenv",
+  "pandas",
+  "psycopg2-binary",
+  "simple-salesforce",
+  "litellm",
+  "opentelemetry-instrumentation-psycopg2"
 ]
 
 [project.optional-dependencies]
