--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,22 +19,9 @@ classifiers = [
 license = {text = "MIT license"}
 dependencies = [
   "typer",
-  "nbdev",
-  "mkdocs-material>=9.6.18",
-  "mkdocs-mermaid2-plugin>=1.2.1",
-  "mkdocs-awesome-pages-plugin>=2.10.1",
-  "mkdocs-minify-plugin>=0.8.0",
-  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
-  "pymdown-extensions>=10.16.1",
   "python-fasthtml>=0.12.29",
   "monsterui",
-  "logfire>=4.20.0",
-  "pydantic-ai>=1.48.0",
   "fastsql>=2.1.2",
-  "duckdb>=1.4.4",
-  "altair>=6.0.0",
-  "pandas>=3.0.0",
-  "simple-salesforce>=1.12.9",
   "authlib>=1.3.2",
 ]
 
@@ -45,6 +32,18 @@ dev = [
     "pytest",  # testing
     "ruff"  # linting
 ]
+pydantic-ai = [
+    "logfire>=4.22.0",
+    "pydantic-ai>=1.56.0",
+]
+agno = [
+    "agno>=2.4.8",
+]
+all = [
+  "pydantic-ai",
+  "agno",
+]
+
 
 [project.urls]
 
