Add render_altair_chart_py function for dynamic Altair chart rendering
- Introduced a new function  to execute Altair chart definitions provided as Python code.
- The function retrieves data via an SQL query, executes the Altair code, and generates an interactive HTML iframe for the chart.
- Added error handling for SQL execution, Altair code execution, and HTML serialization.
- Included detailed logging for debugging chart specifications and rendering process.
- Ensured responsive iframe sizing with dynamic adjustments based on rendered content dimensions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,10 +38,15 @@ pydantic-ai = [
 ]
 agno = [
     "agno>=2.4.8",
+    "openinference-instrumentation-agno>=0.1.12",
+    "opentelemetry-exporter-otlp>=1.31.0",
 ]
 all = [
   "pydantic-ai",
   "agno",
+]
+dashboard = [
+    "altair>=6.0.0",
 ]
 
 
